tests/misc_tests/type_fn_ui_tests/inj_type_fn_conflicting_arguments-err.rs
typewit::inj_type_fn!{
    struct Foo;

    impl u8  => u16;
    impl<T> T => Vec<T>;
}


fn main(){}